[package]
name = "cargo-suity"
version = "0.1.3"
authors = ["Andrey Cherkashin <with.out@me.com>"]
edition = "2018"
description = "Utility to automate test runs and report results in JUnit format"
license ="BSD-2-Clause"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
xml_writer = "0.4.0"
toml = "0.4"
structopt = "0.2"
itertools = "0.8"
is_executable = "0.1.2"
failure = "0.1.5"
colored = "1.7.0"



[[bin]]
name = "cargo-suity"
path = "src/bin/suity.rs"