[package]
name = "cargo-suity"
version = "0.3.0"
authors = ["Andrey Cherkashin <with.out@me.com>"]
edition = "2018"
description = "Utility to automate test runs and report results in JUnit format"
license ="BSD-2-Clause"
readme="README.md"
repository = "https://github.com/andoriyu/cargo-suity"
homepage = "https://github.com/andoriyu/cargo-suity"


[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
xml_writer = "0.4.0"
toml = "0.5"
itertools = "0.10"
is_executable = "1.0.1"
failure = "0.1.5"
colored = "2.0.0"



[[bin]]
name = "cargo-suity"
path = "src/bin/suity.rs"
